--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -120,7 +120,7 @@
 
                     J'y ai mis en oeuvre des animations, des effets de parallaxe et des effets de scroll pour rendre le site plus dynamique et plus attractif et j'ai passé beaucoup de temps sur le moindre petit détail.<br><br>
 
-                    <a id="link" href="#" target="_blank">Lien vers le projet</a><br>
+                    <a id="link" href="https://sebastiendemange.netlify.app/" target="_blank">Lien vers le projet</a><br>
                 </span>
                 <button class="close-btn">X</button>
             </div>
