--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <a href="#" class="logo">SéBASTIEN DEMANGE</a>
         <ul>
-            <li><a href="#" class="active">Accueil</a></li>
+            <li><a href="" class="active">Accueil</a></li>
             <li><a href="/Pages/projects.html">Projets</a></li>
             <li><a href="#">Expériences</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
     </header>
     <section>
