--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     </div>
 
     <script>
+        window.onload = function() {
+    window.scrollTo(0, 0.01 * window.innerHeight);
+};
+      document.addEventListener("DOMContentLoaded", function() {
         let stars = document.getElementById('stars');
         let moon = document.getElementById('moon');
         let mountains_behind = document.getElementById('mountains_behind');
@@ -56,6 +60,8 @@
         let btn = document.getElementById('btn');
         let mountains_front = document.getElementById('mountains_front');
         let header = document.querySelector('header');
+
+     
 
         window.addEventListener('scroll', function(){
             let value = window.scrollY;
@@ -68,7 +74,8 @@
             text.style.marginTop = value * 1.2 + 'px';
             btn.style.marginTop = value * 1.5 + 'px';
             header.style.top = value * 0.9 + 'px';
-        })
+        });
+    });
     </script>
 </body>
 </html>
