--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -94,7 +94,7 @@
                             C'est un électricien à son compte qui cherchait à mettre a jour son site internet et le rendre plus attractif à la clientèle<br><br>
                             Je lui ai donc proposé mon aide pour faire son site, j'ai pu ainsi m'améliorer quant à la qualité de ce que je présente.<br><br>
     
-                            <a id="link" href="https://spot-elec-test-phase.netlify.app/home" target="_blank">Lien vers le projet</a><br>
+                            <a id="link" href="https://www.spotelec.fr/" target="_blank">Lien vers le projet</a><br>
                         </span>
                         <button class="close-btn">X</button>
                     </div>
