--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -36,8 +36,8 @@
                     <p>Vous pouvez également me contacter via LinkedIn et voir mon profil GitHub :</p>
                     <div class="social-icons">
                         
-                        <a href="https://github.com/SEBonduel"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/s%C3%A9bastien-demange-5a4b03243/"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/SEBonduel" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/s%C3%A9bastien-demange-5a4b03243/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
