three js + correction navbar

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -13,7 +13,7 @@
         <ul class="navlist">
             <li><a href="/index.html">Accueil</a></li>
             <li><a href="/Pages/projects.html">Projets</a></li>
-            <li><a href="/Pages/experiences.html">Expériences</a></li>
+            <li><a href="/Pages/skills.html">Compétences</a></li>
             <li><a href="/Pages/contact.html" class="active">Contact</a></li>
         </ul>
    </div>
