--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="" class="active">Accueil</a></li>
             <li><a href="/Pages/projects.html">Projets</a></li>
-            <li><a href="#">Expériences</a></li>
+            <li><a href="/Pages/skills.html">Compétences</a></li>
             <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
     </header>
