--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -17,7 +17,7 @@
         <ul class="navlist">
             <li><a href="/index.html">Accueil</a></li>
             <li><a href="/Pages/projects.html" class="active">Projets</a></li>
-            <li><a href="/Pages/experiences.html">Expériences</a></li>
+            <li><a href="/Pages/skills.html">Compétences</a></li>
             <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
     </div>
