--- a/Pages/skills.html
+++ b/Pages/skills.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Parcours Académique 3D</title>
+    <title>Compétences</title>
     <style>
         body {
             margin: 0;
