--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -8,6 +8,9 @@
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <video autoplay muted loop id="bg-video">
+        <source src="/Medias/background.mp4" type="video/mp4">
+    </video>
    <div class="navbar">
         <a href="/index.html" class="logo">SéBASTIEN DEMANGE</a>
         <ul class="navlist">
