--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -31,9 +31,9 @@
         <!-- Menu déroulant caché -->
         <nav class="menu-burger-hide">
             <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">Projets</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/index.html">Accueil</a></li>
+                <li><a href="/Pages/projects.html">Projets</a></li>
+                <li><a href="/Pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
