responsive project page

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -44,8 +44,8 @@
                 <div class="row">
                     <div class="icon">1</div>
                     <div class="description">
-                        <h4>Portfolio 2022</h4>
-                        <p>Mon tout premier portfolio en HTML/CSS mis en ligne</p>
+                        <h4 class="project_title">Portfolio 2022</h4>
+                        <p class="p_details">Mon tout premier portfolio en HTML/CSS mis en ligne</p>
                     </div>    
                 </div>
                 <div class="popup">
@@ -66,8 +66,8 @@
                 <div class="row">
                     <div class="icon">2</div>
                     <div class="description">
-                        <h4>ConsensUs</h4>
-                        <p>Un projet de développement web réalisé en 2023 dans le cadre de ma license professionelle CIASIE.</p>
+                        <h4 class="project_title">ConsensUs</h4>
+                        <p class="p_details">Un projet de développement web réalisé en 2023 dans le cadre de ma license professionelle CIASIE.</p>
                     </div>    
                 </div>
                 <div class="popup">
@@ -100,8 +100,8 @@
                 <div class="row">
                     <div class="icon">3</div>
                     <div class="description">
-                        <h4>Spot'Elec</h4>
-                        <p>Un projet de site vitrine pour un ami électricien à son compte.</p>
+                        <h4 class="project_title">Spot'Elec</h4>
+                        <p class="p_details">Un projet de site vitrine pour un ami électricien à son compte.</p>
                         
                     </div>
 
@@ -125,8 +125,8 @@
                 <div class="row">
                     <div class="icon">4</div>
                     <div class="description">
-                        <h4>PORTFOLIO 2024</h4>
-                        <p>Le tout dernier portfolio que j'ai mis en ligne actuellement</p>
+                        <h4 class="project_title">PORTFOLIO 2024</h4>
+                        <p class="p_details">Le tout dernier portfolio que j'ai mis en ligne actuellement</p>
                     </div>    
                 </div>
             
@@ -151,8 +151,8 @@
                 <div class="row">
                     <div class="icon">5</div>
                     <div class="description">
-                        <h4>Ham'Apiens</h4>
-                        <p>Amap collaborative</p>
+                        <h4 class="project_title">Ham'Apiens</h4>
+                        <p class="p_details">Amap collaborative</p>
                     </div>    
                 </div>
                 <div class="popup">
