--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -8,6 +8,10 @@
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="center" id="preloader">
+        <div class="ring"></div>
+        <span class="loading">Chargement...</span>
+    </div>
     <video autoplay muted loop id="bg-video">
         <source src="/Medias/background.mp4" type="video/mp4">
     </video>
