--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -8,6 +8,10 @@
 
 </head>
 <body>
+    <div class="center" id="preloader">
+        <div class="ring"></div>
+        <span class="loading">Chargement...</span>
+    </div>
 
     <video autoplay muted loop id="bg-video">
         <source src="/Medias/background.mp4" type="video/mp4">
