scroll indication button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="/Medias/moon.png" id="moon">
         <img src="/Medias/mountains_behind.png" id="mountains_behind">
         <h2 id="text">Bienvenue</h2>
-        <a href="#sec" id="btn">En savoir plus</a>
+        <a href="#sec" id="btn"> </a>
         <img src="/Medias/mountains_front.png" id="mountains_front">
     </section>
     <div class="sec" id="sec">
