--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sébastien DEMANGE</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="Medias/icon_demange_sebastien.png" type="image/png">
 </head>
 <body>
     <div class="center" id="preloader">
