--- a/index.html
+++ b/index.html
@@ -72,6 +72,140 @@
             y trouverez et que vous serez inspiré par mes projets et mes réalisations.<br><br>
         </p>    
     </div>
+    <div class="all-skills">
+        <div class="wrapper">
+            <div class="shape-1"></div>
+            <div class="shape-2"></div>
+            <div class="container">
+                <h2>Expérience</h2>
+                <div class="skills">
+                    <div class="details">
+                        <span>HTML</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="html-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>CSS</span>
+                        <span>85%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="css-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Javascript</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="js-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>React JS</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="ReactJS-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Vue JS</span>
+                        <span>75%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="VUE-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>PHP</span>
+                        <span>75%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="PHP-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>MySql</span>
+                        <span>75%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="MYSQL-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Flutter</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="flutter-bar"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
+        <div class="wrapper2">
+            <div class="shape-3"></div>
+            <div class="shape-4"></div>
+            <div class="container2">
+                <h2>Soft Skills</h2>
+                <div class="skills">
+                    <div class="details">
+                        <span>Travail d'équipe</span>
+                        <span>95%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="teamwork-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Communication</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="communication-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Adaptabilité</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="adapt-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Résolution de problèmes </span>
+                        <span>85%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="resoPb-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Gestion du temps </span>
+                        <span>85%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="time-bar"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="../JS/scroll.js"></script>
 </body>
 </html>
