--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sébastien DEMANGE</title>
     <link rel="stylesheet" href="/Pages_styles/contact.css">
+    <link rel="icon" href="Medias/icon_demange_sebastien.png" type="image/png">
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 </head>
 <body>
