--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Pages_styles/projects.css">
+    <link rel="icon" href="Medias/icon_demange_sebastien.png" type="image/png">
     <title>Sébastien DEMANGE</title>
 
 </head>
