add password generator project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -177,6 +177,29 @@
             </label>
             <br>
 
+            <input class="onglet" type="radio" name="slide" id="c6">
+            <label for="c6" class="card">
+                <div class="row">
+                    <div class="icon">6</div>
+                    <div class="description">
+                        <h4 class="project_title">Générateur de Mot de Passe</h4>
+                        <p class="p_details">Application permettant de générer aléatoirement un mot de passe</p>
+                    </div>    
+                </div>
+                <div class="popup">
+                    <span class="popuptext">
+
+                        <strong>Il s'agit d'une application web permettant de générer aléatoirement un Mot de Passe.</strong><br><br>
+                        L'application est réalisée en ReactJS et le mot de passe est généré aléatoirement en stockant des caractères et en les mélangeant aléatoirement.<br><br>
+                        L'application est en ligne, fonctionnelle et comprend un thème sombre.<br><br>
+
+                        <a id="link" href="https://generateur-mot-de-passe.netlify.app/" target="_blank">Lien vers le projet</a><br>
+                    </span>
+                    <button class="close-btn">X</button>
+                </div>
+            </label>
+            <br>
+
         </div>
     </div>
     <script src="../JS/script.js"></script>
