--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <div class="sec" id="sec">
         <h2>À propos de moi</h2>
-        <p>Je suis Sébastien DEMANGE, un passionné de développement d'application web, de musique, de guitare et de production vidéos musicales âgé de 25 ans.<br><br>
+        <p>Je m'appelle Sébastien DEMANGE, un passionné de développement d'application web, de musique, de guitare et de production vidéos musicales âgé de 25 ans.<br><br>
 
             Depuis que j'ai commencé à apprendre le développement web en 2021 dans le cadre de mon BTS, 
             j'ai été fasciné par les possibilités et les opportunités qu'offre ce domaine passionnant. 
