changing "about me"

--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
             que je voulais faire de cette passion mon métier. Mon portfolio est un témoignage de mon parcours jusqu'à présent, 
             ainsi que de mes projets et réalisations en développement web, en production vidéo et dans d'autres domaines connexes.<br><br>
 
-            En parcourant mon portfolio, vous pourrez voir mes compétences en développement web, 
-            ainsi que mes réalisations en matière de production vidéo. Vous pourrez également découvrir mes projets, 
-            mes contributions à des projets open-source, ainsi que mes réflexions sur les dernières tendances et technologies 
-            en matière de développement web.<br><br>
+            En parcourant mon portfolio, vous pourrez voir mes compétences en développement web à travers divers projets, vous pourrez trouver mes réseaux 
+            comme LinkedIn ainsi que mon GitHub dans la page contact en cliquant sur les cases prévues à cet effet.<br><br>
 
             Je suis fier de ce que j'ai accompli jusqu'à présent, mais je suis également impatient de continuer à développer mes compétences et à explorer de nouveaux projets
             et domaines d'intérêt. Si vous êtes intéressé à travailler avec moi ou à explorer de nouvelles opportunités de collaboration, n'hésitez pas à me contacter.<br><br>
