--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
                 </div>
                 <div class="skills">
                     <div class="details">
+                        <span>TailwindCss</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="tailwindcss-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
+                        <span>Bootstrap</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="bootstrap-bar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="details">
                         <span>Vue JS</span>
                         <span>75%</span>
                     </div>
